--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Corona Ampel</string>
+    <string name="update">Aktualisieren</string>
+    <string name="about">Über</string>
+    <string name="licenses">Open Source Lizenzen</string>
 </resources>
