--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="tv_pressemitteilung">Pressemitteilung</string>
     <string name="about_data"><![CDATA[
         <h1>Berliner Corona Ampel App</h1>
-            <p>Carsten Neumann, Jungfernstieg 3, 12207 Berlin<br>cbca@sacree-mer.de</p>
+            <p>Carsten Neumann, Jungfernstieg 3, 12207 Berlin<br>bca@sacree-mer.de</p>
         <h2>Datenverarbeitung</h2>
             <p>Diese App erfasst, speichert und verarbeitet keine Daten der Nutzer.</p>
             <p>Es wird lediglich die Webite des Landes Berlin aufgerufen. Die Datenschutzerklärung dafür finden Sie weiter unten.</p>
